--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Maham F Khan | Your Professional Title</title>
+<title>Maham F. Khan | Data scientist</title>
 <link rel="icon" type="image/png" href="https://mahamfkhan.github.io/cv/img/emojis/technologist.png" hreflang="en-us">
-<meta property="og:title" content="Maham F Khan | Your Professional Title" />
+<meta property="og:title" content="Maham F. Khan | Data scientist" />
 <meta property="og:description" content="Your personal description and professional focus" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://mahamfkhan.github.io/cv/" />
-<meta property="og:site_name" content="Maham F Khan" />
+<meta property="og:site_name" content="Maham Faisal Khan" />
 <meta property="og:image" content="https://mahamfkhan.github.io/cv/img/og.png" />
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="800" />
@@ -19,14 +19,14 @@
 <meta name="description" content="Your personal description and professional focus">
 <meta name="keywords" content="design, development, web, bchiang7, brittany, chiang, javascript, northeastern">
 <meta name="google-site-verification" content="DCl7VAf9tcz6eD9gb67NfkNnJ1PKRNcg8qQiwpbx9Lk" />
-<meta itemprop="name" content="Maham F Khan | Your Professional Title">
+<meta itemprop="name" content="Maham F. Khan | Data scientist">
 <meta itemprop="description" content="Your personal description and professional focus">
 <meta itemprop="image" content="https://mahamfkhan.github.io/cv/img/og.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:url" content="https://mahamfkhan.github.io/cv/">
 <meta name="twitter:site" content="@bchiang7">
 <meta name="twitter:creator" content="@bchiang7">
-<meta name="twitter:title" content="Maham F Khan | Your Professional Title">
+<meta name="twitter:title" content="Maham F. Khan | Data scientist">
 <meta name="twitter:description" content="Your personal description and professional focus">
 <meta name="twitter:image:src" content="https://mahamfkhan.github.io/cv/img/og.png">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
